# fusil_cereggii_plugin

./: README.md  pyproject.toml
fusil_cereggii_plugin/: __init__.py  tricky_cereggii_aggregator.py
fusil_cereggii_plugin/samples/: tricky_atomicdict.py  tricky_atomicint64.py  tricky_atomicint_scenarios.py  tricky_atomicref.py  tricky_atomicref_scenarios.py  tricky_colliding_keys.py  tricky_concurrency_hell.py  tricky_python_utils_scenarios.py  tricky_recursive_cereggii.py  tricky_reduce_nightmares.py  tricky_stateful_scenarios.py  tricky_synergy_scenarios.py  tricky_threadhandle.py  tricky_threadhandle_scenarios.py  tricky_weird_cereggii.py
tests/: test_cereggii_plugin.py
